--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -1,14 +1,13 @@
 <div class="holder padding-zero">
     <div class="media-center-plugin layout2">
-        <div class="people-banner border-bottom-grey"
-             style="background:url(http://www.placehold.it/400x400.jpg) no-repeat; background-position:center center; background-size:cover;">
+        <div class="people-banner border-bottom-grey">
             <div class="people-bg padding-top-fifteen padding-bottom-fifteen clearfix">
                 <div class="people-holder clearfix">
-                    <div class="people-media text-center" ng-if="WidgetMedia.item.data.topImage">
-                        <!--<img data-ng-hide="WidgetMedia.item.data.videoUrl && audio"
-                             ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">-->
+                    <div class="people-media text-center">
+                       <img data-ng-hide="WidgetMedia.item.data.videoUrl"
+                             ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 250 : 400}}">
 
-                        <div data-ng-show="WidgetMedia.item.data.videoUrl && !audio" class="videogular-container">
+                        <div data-ng-show="WidgetMedia.item.data.videoUrl" class="videogular-container">
                             <videogular vg-theme="WidgetMedia.config.theme.url">
                                 <vg-media vg-src="WidgetMedia.config.sources"
                                           vg-tracks="WidgetMedia.config.tracks"
@@ -30,19 +29,6 @@
                                 <vg-overlay-play></vg-overlay-play>
                             </videogular>
                         </div>
-                        <div>
-                            <h2>
-                                Playing
-                            </h2>
-                            <input id="slider" ng-show="duration" type="range" min="0" max="{{duration}}"
-                                   ng-model="currentTime"/>
-                            <a href="javascript:void(0)" ng-click="WidgetMedia.previous()">&lt&lt Previous</a>
-                            <a href="javascript:void(0)" ng-click="WidgetMedia.skip(-10)">&lt Back</a>
-                            <a href="javascript:void(0)" ng-click="WidgetMedia.pause();">Pause ||</a>
-                            <a href="javascript:void(0)" ng-click="WidgetMedia.playAudio()">Play </a>
-                            <a href="javascript:void(0)" ng-click="WidgetMedia.skip(10)">Skip &gt;</a>
-                            <a href="javascript:void(0)" ng-click="WidgetMedia.next()">Next &gt;&gt;</a>
-                        </div>
                     </div>
                     <div class="people-info text-center col-md-12">
                         <h5 class="ellipsis margin-top-fifteen">{{WidgetMedia.item.data.title}}</h5>
@@ -54,7 +40,7 @@
         <div class="padded">
             <div class="link-list">
                 <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
-                   ng-click="WidgetMedia.listen()">Listen</a>
+                   href="#/nowplaying/{{WidgetMedia.item.data.audioUrl}}">Listen</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl">Watch</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl">View Source</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.links.length">Share</a>
