Audio title added to media page

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -67,6 +67,15 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
+        <span>Audio Title</span>
+    </div>
+    <div class="main col-md-9 pull-right">
+        <input type="text" class="form-control" placeholder="Audio Title" ng-model="ContentMedia.item.data.audioTitle">
+    </div>
+</div>
+<hr class="none">
+<div class="item clearfix row">
+    <div class="labels col-md-3 padding-right-zero pull-left">
         <span>Audio URL</span>
     </div>
     <div class="main col-md-9 pull-right">
