--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -15,7 +15,7 @@
             </div>
             </div>
         <div class="media-player-info margin-top-twenty">
-            <h4 class="margin-zero ellipsis">Keane</h4>
+            <h4 class="margin-zero ellipsis">{{NowPlaying.item.data.audioTitle}}</h4>
 
             <p class="margin-zero ellipsis">Under the Iron Sea</p>
 
