--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -6,11 +6,14 @@
     <div class="main col-md-9 pull-right">
         <div class="screens clearfix">
             <div class="screen carouselicon pull-left text-center">
-                <a class="border-grey border-radius-three default-background-hover" ng-click="ContentMedia.selectTopImage()">
+                <a class="border-grey border-radius-three default-background-hover"
+                   ng-click="ContentMedia.selectTopImage()">
                     <span class="add-icon hidden">+</span>
-                    <img ng-show="ContentMedia.item.data.topImage" ng-src="{{ContentMedia.item.data.topImage | resizeImage : 82:110}}">
+                    <img ng-show="ContentMedia.item.data.topImage"
+                         ng-src="{{ContentMedia.item.data.topImage | resizeImage : 82:110}}">
                 </a>
-                <span class="icon btn-delete-icon btn-danger transition-third" ng-click="ContentMedia.removeTopImage()"></span>
+                <span class="icon btn-delete-icon btn-danger transition-third"
+                      ng-click="ContentMedia.removeTopImage()"></span>
                 <label class="secondary">1024x1024</label>
             </div>
         </div>
@@ -43,7 +46,8 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="main col-md-12 pull-right">
-        <textarea class="form-control" placeholder="WYSIWYG" ui-tinymce="ContentMedia.bodyContentWYSIWYGOptions"  ng-model="ContentMedia.item.data.body"></textarea>
+        <textarea class="form-control" placeholder="WYSIWYG" ui-tinymce="ContentMedia.bodyContentWYSIWYGOptions"
+                  ng-model="ContentMedia.item.data.body"></textarea>
     </div>
 </div>
 <hr class="none">
@@ -61,7 +65,8 @@
         <span>Video URL</span>
     </div>
     <div class="main col-md-9 pull-right">
-        <input type="text" class="form-control" placeholder="Video URL" ng-model="ContentMedia.item.data.videoUrl">
+        <input type="text" class="form-control" video-url placeholder="Video URL"
+               ng-model="ContentMedia.item.data.videoUrl">
     </div>
 </div>
 <hr class="none">
@@ -90,11 +95,14 @@
     <div class="main col-md-9 pull-right">
         <div class="screens clearfix">
             <div class="screen pull-left text-center">
-                <a class="border-grey border-radius-three default-background-hover" ng-click="ContentMedia.selectAudioImage()">
+                <a class="border-grey border-radius-three default-background-hover"
+                   ng-click="ContentMedia.selectAudioImage()">
                     <span class="add-icon hidden">+</span>
-                    <img ng-show="ContentMedia.item.data.image" ng-src="{{ContentMedia.item.data.image | resizeImage : 82:110}}">
+                    <img ng-show="ContentMedia.item.data.image"
+                         ng-src="{{ContentMedia.item.data.image | resizeImage : 82:110}}">
                 </a>
-                <span ng-show="ContentMedia.item.data.image" class="icon btn-delete-icon btn-danger transition-third" ng-click="ContentMedia.removeAudioImage()"></span>
+                <span ng-show="ContentMedia.item.data.image" class="icon btn-delete-icon btn-danger transition-third"
+                      ng-click="ContentMedia.removeAudioImage()"></span>
                 <label class="secondary">1024x1024</label>
             </div>
         </div>
@@ -113,21 +121,25 @@
 </div>
 <hr class="none">
 <div class="item clearfix">
-    <div class="draggable-list-view wide-list has-btn links-list" ui-sortable="ContentMedia.linksSortableOptions" ng-model="ContentMedia.item.data.links">
+    <div class="draggable-list-view wide-list has-btn links-list" ui-sortable="ContentMedia.linksSortableOptions"
+         ng-model="ContentMedia.item.data.links">
         <div class="d-item double-line square-icon clearfix" ng-repeat="link in ContentMedia.item.data.links">
             <span class="icon icon-menu pull-left handle"></span>
+
             <div class="media-holder pull-left">
                 <img src="http://www.placehold.it/50x50">
             </div>
             <div class="copy pull-right">
                 <div class="col-md-4 padding-zero pull-left">
-                    <a class="text-primary" ng-click="ContentMedia.openEditLinkPopup(link,$index)"><span class="title ellipsis pull-left">{{link.title}}</span></a>
+                    <a class="text-primary" ng-click="ContentMedia.openEditLinkPopup(link,$index)"><span
+                            class="title ellipsis pull-left">{{link.title}}</span></a>
                     <!--<span class="title ellipsis pull-left">Item Summary Item Summary Item Summary</span>-->
                 </div>
                 <!--<div class="col-md-7 padding-right-zero pull-left">
                     <span class="content ellipsis">http://www.thelinkgoeshereandifitslongitwillwraparound</span>
                 </div>-->
-                <span class="btn-icon btn-delete-icon btn-danger transition-third pull-right" ng-click="ContentMedia.removeLink($index)"></span>
+                <span class="btn-icon btn-delete-icon btn-danger transition-third pull-right"
+                      ng-click="ContentMedia.removeLink($index)"></span>
             </div>
         </div>
     </div>
@@ -139,7 +151,8 @@
             <a class="btn btn-danger pull-right stretch" ng-click="ContentMedia.delete();" href="javascript:void(0)">Delete</a>
         </div>
         <div class="col-md-6 pull-right padding-right-zero padding-left-ten">
-            <a class="btn btn-primary pull-right stretch" ng-click="ContentMedia.done()" href="javaScript:void(0);">Done</a>
+            <a class="btn btn-primary pull-right stretch" ng-click="ContentMedia.done()"
+               href="javaScript:void(0);">Done</a>
         </div>
     </div>
 </div>
