--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -1,40 +1,27 @@
 <div class="holder padding-zero">
     <div id="scroll-infinite" class="media-center-plugin layout3">
-        <div class="media-center-banner clearfix border-bottom-grey">
-            <!-- <div class="plugin-slider text-center">
-                 <div class="plugin-slide" ng-if="WidgetHome.media.data.content.images[0].imageUrl">
-                     &lt;!&ndash;data-ng-repeat="image in WidgetHome.media.data.content.images"&ndash;&gt;
-                     <img ng-src="{{WidgetHome.media.data.content.images[0].imageUrl | resizeImage: 342 : 192}}">
-                 </div>
-             </div>-->
+        <div class="plugin-banner clearfix border-bottom-grey">
             <buildfire-carousel images="WidgetHome.media.data.content.images"></buildfire-carousel>
         </div>
-        <div class="text-left padded padding-bottom-zero clearfix">
-            <p ng-if="WidgetHome.media.data.content.descriptionHTML"
-               ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
-                {{WidgetHome.media.data.content.descriptionHTML}}</p>
+        <div class="padded text-left">
+            <p class="margin-bottom-zero" ng-if="WidgetHome.media.data.content.descriptionHTML" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">{{WidgetHome.media.data.content.descriptionHTML}}</p>
         </div>
-
-        <div class="list-layout"
+        <div infinite-scroll-distance="0"
              infinite-scroll="WidgetHome.loadMore()"
              infinite-scroll-disabled="WidgetHome.noMore"
-             infinite-scroll-container='"#scroll-infinite"'
-             infinite-scroll-distance="0">
-            <div class="list-item" ng-repeat="item in WidgetHome.items">
-                <div class="list-item-media text-left overflow-hidden">
-                    <div class="list-media-holder pull-left" ng-if="item.data.topImage"
-                         play-btn="{{item.data.videoUrl.length > 0}}">
-                        <img ng-src="{{item.data.topImage | resizeImage:240:160}}">
+             infinite-scroll-container='"#scroll-infinite"'>
+            <div class="" ng-repeat="item in WidgetHome.items">
+                <div class="plugin-banner clearfix">
+                    <div class="" ng-if="item.data.topImage" play-btn="{{item.data.videoUrl.length > 0}}">
+                        <img ng-src="{{item.data.topImage | cropImage:340:190}}">
                     </div>
-                    <div class="list-item-copy text-left padding-left-ten padding-right-ten">
-                        <p class="ellipsis margin-zero"><a class="text-primary">{{item.data.title}}</a></p>
-
-                        <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
-                        <span class="list-item-date" data-ng-if="item.data.dateCreated">{{item.data.dateCreated  | jsDate | date:"MMMM dd, yyyy"}}</span>
-                    </div>
+                </div>
+                <div class="padded text-left">
+                    <a class="text-primary">{{item.data.title}}</a>
+                    <p class="margin-bottom-zero">{{item.data.summary}}</p>
+                    <span class="list-item-date" data-ng-if="item.data.dateCreated">{{item.data.dateCreated  | jsDate | date:"MMMM dd, yyyy"}}</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
