--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -20,7 +20,7 @@
             <div class="link-list">
                 <a class="text-primary" ng-if="WidgetMedia.item.data.audioUrl"
                    href="#/nowplaying/{{WidgetMedia.item.id}}">Listen</a>
-                <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl">Watch</a>
+                <a class="text-primary" ng-if="WidgetMedia.item.data.videoUrl" ng-click="WidgetMedia.API.play()">Watch</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.srcUrl" href="{{WidgetMedia.item.data.srcUrl}}" target="_blank">View Source</a>
                 <a class="text-primary" ng-if="WidgetMedia.item.data.links.length">Share</a>
             </div>
