removed default top image from item page

--- a/widget/templates/layouts/item-1.html
+++ b/widget/templates/layouts/item-1.html
@@ -3,7 +3,7 @@
         <div class="media-center-banner clearfix border-bottom-grey">
             <div class="plugin-slider text-center">
                 <div ng-style="WidgetMedia.item.data.videoUrl == '' ? {'min-height': '192px'} : {}"  class="plugin-slide">
-                    <img data-ng-hide="WidgetMedia.item.data.videoUrl"
+                    <img data-ng-hide="WidgetMedia.item.data.videoUrl || !WidgetMedia.item.data.topImage"
                          ng-src="{{WidgetMedia.item.data.topImage | resizeImage : 300 : 180}}"/>
 
                     <div ng-include="'templates/layouts/videoPlayer.html'"></div>
