--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -288,3 +288,5 @@ input[type=range]:focus::-ms-fill-upper {
     padding-left:1%;
     padding-right:15px;
 }
+
+.owl-dots{display: none !important;}
