--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -81,6 +81,15 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
+        <span>Album Artists</span>
+    </div>
+    <div class="main col-md-9 pull-right">
+        <input type="text" class="form-control" placeholder="Album Artists" ng-model="ContentMedia.item.data.artists">
+    </div>
+</div>
+<hr class="none">
+<div class="item clearfix row">
+    <div class="labels col-md-3 padding-right-zero pull-left">
         <span>Audio URL</span>
     </div>
     <div class="main col-md-9 pull-right">
