--- a/widget/templates/modals/audio-setting.html
+++ b/widget/templates/modals/audio-setting.html
@@ -12,7 +12,8 @@
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
-                                <input type="checkbox" id="playnext">
+                                <input id="playnext" type="checkbox" ng-model="SettingsModal.settings.autoPlayNext"
+                                       ng-change="SettingsModal.saveSettings()">
                                 <label for="playnext"></label>
                             </div>
                         </div>
@@ -23,8 +24,10 @@
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
-                                <input type="checkbox" id="playnext">
-                                <label for="playnext"></label>
+                                <input id="looplist" type="checkbox" ng-model="SettingsModal.settings.loopPlaylist"
+                                       ng-change="SettingsModal.saveSettings()">
+                                <label for="looplist"></label>
+
                             </div>
                         </div>
                     </div>
@@ -34,8 +37,9 @@
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
-                                <input type="checkbox" id="playnext">
-                                <label for="playnext"></label>
+                                <input id="looptrack" type="checkbox" ng-model="SettingsModal.settings.loopTrack"
+                                       ng-change="SettingsModal.saveSettings()">
+                                <label for="looptrack"></label>
                             </div>
                         </div>
                     </div>
@@ -45,8 +49,10 @@
                         </div>
                         <div class="col-md-2 pull-right text-right">
                             <div class="checkbox checkbox-primary checked no-label margin-zero">
-                                <input type="checkbox" id="playnext">
-                                <label for="playnext"></label>
+                                <input id="playlast" type="checkbox"
+                                       ng-model="SettingsModal.settings.autoJumpToLastPosition"
+                                       ng-change="SettingsModal.saveSettings()"/>
+                                <label for="playlast"></label>
                             </div>
                         </div>
                     </div>
