--- a/widget/templates/modals/playlist.html
+++ b/widget/templates/modals/playlist.html
@@ -9,7 +9,7 @@
                     <div class="list-item ">
                         <div class="list-item-media now-playing text-left">
                             <div class="list-media-holder square-icon pull-left">
-                                <img src="http://www.placehold.it/30x30">
+                                <img if="PlaylistModal.info.data.image" ng-src="{{PlaylistModal.info.data.image | resizeImage :30 :30}}">
                             </div>
                             <div class="list-item-copy text-left padding-left-ten padding-right-ten">
                                 <p class="margin-bottom-zero ellipsis margin-top-fifteen">{{PlaylistModal.info.data.audioTitle}}</p>
