Widget: Video Bottom Border Issue Fix

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -93,7 +93,7 @@
 
 .videogular-container {
     width: 100%;
-    /*height: 320px;*/
+    height: auto;
     margin: auto;
     overflow: hidden;
 }
@@ -290,3 +290,17 @@ input[type=range]:focus::-ms-fill-upper {
 }
 
 .owl-dots{display: none !important;}
+
+
+videogular vg-controls{
+    height:45px !important;
+    overflow: hidden;
+}
+videogular, [videogular]{
+    background-color: rgba(0,0,0,0) !important;
+}
+
+.video-container-background{
+    background-color: #FFFFFF !important;
+}
+
