--- a/widget/templates/layouts/videoPlayer.html
+++ b/widget/templates/layouts/videoPlayer.html
@@ -19,8 +19,9 @@
                     <vg-mute-button></vg-mute-button>
                     <vg-volume-bar></vg-volume-bar>
                 </vg-volume>
+                <vg-fullscreen-button></vg-fullscreen-button>
             </vg-controls>
-            <vg-overlay-play></vg-overlay-play>
+            <!--<vg-overlay-play></vg-overlay-play>-->
         </videogular>
 
 
