--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -13,71 +13,40 @@
                      src="assets/images/now-playing.png" height="260px" width="260">
             </div>
         </div>
-        <div class="media-player-info margin-top-twenty">
+        <div class="media-player-info margin-top-fifteen">
             <h4 class="margin-zero ellipsis">{{NowPlaying.item.data.audioTitle}}</h4>
-            <!--<p class="margin-zero ellipsis">Artist or Album Title</p>-->
+            <p class="margin-zero ellipsis">{{NowPlaying.item.data.artists}}</p>
         </div>
-        <div class="slider margin-top-twenty">
+        <div class="slider margin-top-fifteen">
             <div class="playerMP">
-                <div>{{currentTime | number:2}}</div>
-                <div><input id="slider" ng-show="duration" type="range" min="0" max="{{duration}}"
-                            ng-model="currentTime"/></div>
-                <div>{{duration | number:2}}</div>
+                <div>{{NowPlaying.currentTime | number:2}}</div>
+                <div><input ng-show="NowPlaying.duration" type="range" min="0" max="{{NowPlaying.duration}}"
+                            ng-model="NowPlaying.currentTime" ng-change="NowPlaying.changeTime(NowPlaying.currentTime)"/></div>
+                <div>{{NowPlaying.duration | number:2}}</div>
             </div>
         </div>
         <div class="text-center margin-top-fifteen">
             <span class="icon icon-dots"></span>
         </div>
         <div class="media-player-action-btns margin-top-twenty">
-            <span class="icon icon-volume-high icon-sm"></span>
+            &nbsp;<input ng-style="NowPlaying.showVolume? {'visibility':'visible'}:{'visibility':'hidden'}"  type="range" min="0" max="1" step="0.1" ng-model="NowPlaying.volume" ng-change="NowPlaying.changeVolume(NowPlaying.volume)" style="width: 15%;margin-left: 35px;margin-bottom: 10px; "/>
+
+            <span class="icon icon-volume-high icon-sm" ng-click="NowPlaying.showVolume=!NowPlaying.showVolume"></span>
             <span class="icon icon-ellipsis icon-sm" ng-click="NowPlaying.openMoreInfoPopup()"></span>
             <span class="icon icon-cog icon-sm" ng-click="NowPlaying.openSettingsPopup()"></span>
         </div>
         <a class="media-player-btns margin-top-ten">
-            <span class="icon icon-shuffle icon-sm"></span>
+            <span class="icon icon-shuffle icon-sm" ng-click="NowPlaying.shuffle()"></span>
             <span class="icon icon-backward-circle" ng-click="NowPlaying.backward()"></span>
             <span ng-if="!NowPlaying.playing" class="icon icon-play-circle icon-main"
                   ng-click="NowPlaying.playAudio()"></span>
             <span ng-if="NowPlaying.playing" class="icon icon-pause-circle icon-main"
                   ng-click="NowPlaying.pause()"></span>
-            <span class="icon icon-forward-circle" ng-clibk="NowPlaying.forward()"></span>
-            <span class="icon icon-repeat icon-sm"></span>
+            <span class="icon icon-forward-circle" ng-click="NowPlaying.forward()"></span>
+            <span class="icon icon-repeat icon-sm" ng-click="NowPlaying.repeatTrack()"></span>
             <span class="icon icon-repeat-one icon-sm primaryTheme hidden"></span>
             <span class="icon icon-repeat icon-sm primaryTheme hidden"></span>
             </a>
         </div>
     </div>
-   <!-- <div class="media-center-plugin">
-        <div class="media-holder">
-            <div class="media-inner text-center">
-                <img ng-if="NowPlaying.item.data.image" class="border-radius-four"
-                     ng-src="{{NowPlaying.item.data.image}}" height="260px" width="260">
-                <img ng-if="!NowPlaying.item.data.image" class="border-radius-four"
-                     src="assets/images/now-playing.png" height="260px" width="260">
-            </div>
-        </div>
-        <div class="slider margin-top-twenty">
-            <div class="playerMP">
-                <div>{{currentTime | number:2}}</div>
-                <div><input id="slider" ng-show="duration" type="range" min="0" max="{{duration}}"
-                            ng-model="currentTime"/></div>
-                <div>{{duration | number:2}}</div>
-            </div>
-        </div>
-        <div class="media-player-info margin-top-twenty">
-            <h4 class="margin-zero ellipsis">{{NowPlaying.item.data.audioTitle}}</h4>
-
-            <p class="margin-zero ellipsis">Under the Iron Sea</p>
-
-            <p class="margin-zero">{{NowPlaying.item.data.dateCreated | jsDate | date:"MMMM dd, yyyy"}}</p>
-        </div>
-        <div class="media-player-btns margin-top-twenty">
-            <span class="icon icon-backward-circle" ng-click="NowPlaying.previous()"></span>
-            <span ng-if="!NowPlaying.playing" class="icon icon-play-circle icon-main"
-                  ng-click="NowPlaying.playAudio()"></span>
-            <span ng-if="NowPlaying.playing" class="icon icon-pause-circle icon-main"
-                  ng-click="NowPlaying.pause()"></span>
-            <span class="icon icon-forward-circle" ng-click="NowPlaying.next()"></span>
-        </div>
-    </div>-->
 </div>
