--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
         </div>
-        <div class="well text-center margin-bottom-zero border-none"
+        <div class="well text-center margin-bottom-zero border-none" style="margin-top: 10px"
              ng-hide="ContentHome.info.data.content.images.length">
             <p class="margin-zero">No items found.</p>
         </div>
