--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -31,6 +31,15 @@
 <hr class="none">
 <div class="item clearfix row">
     <div class="labels col-md-3 padding-right-zero pull-left">
+        <span>Deep Link URL</span>
+    </div>
+    <div class="main col-md-9 pull-right">
+        <span>{{ContentMedia.item.data.deepLinkUrl}}</span>
+    </div>
+</div>
+<hr class="none">
+<div class="item clearfix row">
+    <div class="labels col-md-3 padding-right-zero pull-left">
         <span>Summary</span>
     </div>
     <div class="main col-md-9 pull-right">
