--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1,11 +1,10 @@
 .customBackground {
     background-position: center center !important;
-    background-size: initial;
+    background-size: 100% 100% !important;
     background-repeat: no-repeat !important;
     background-origin: initial;
     background-clip: initial;
     background-attachment: fixed;
-    background-color: #010101;
 }
 
 .plugin-banner {
