--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -16,7 +16,7 @@
             <h4 class="margin-zero ellipsis">{{NowPlaying.item.data.audioTitle}}</h4>
             <p class="margin-zero ellipsis">{{NowPlaying.item.data.artists}}</p>
         </div>
-        <div class="slider margin-top-fifteen">
+        <div class="slider margin-top-fifteen" style="margin-bottom: -50px;">
             <div class="playerMP">
                 <div>{{NowPlaying.currentTime | number:0}}</div>
                 <div><input ng-show="NowPlaying.duration" type="range" min="0" max="{{NowPlaying.duration}}"
